<?xml version="1.0"?>
<package format="2">
  <name>gnss_comm_msgs</name>
  <version>0.0.1</version>
  <description>
  Messages from GNSS receiver.
  </description>
  <maintainer email="beuchert@robots.ox.ac.uk">Jonas Beuchert</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
</package>
